--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -273,5 +273,86 @@
 			</p>
 		</div>
 	</div>
+	<div class="row" style="width: 2000px; background-color: skyblue; text-align: center;">
+		<div class="col">
+			<h2 style="text-align: center;">
+				 LOOKING FOR A RELIABLE SUPPLIER?
+			</h2>
+			<p style="text-align: center; margin-left: 30%; margin-right: 30%;">
+				At Fabricators India, we aim to build long-term partnerships with our clients in order to ensure a world-class, integrated supply chain. We strive to consistently meet extremely high standards for quality, delivery, cost and customer satisfaction for our clients. 
+			</p>
+			<h2 style="text-align: center;">
+			
+				<%= link_to "CONTACT US", articles_contact_path, class:"btn btn-primary" %>
+			</h1>
+		</div>
+	</div>
+	<div class="row" style="width: 2000px; background-color: gray; text-align: center;">
+		<div class="col" style=" margin-top: 5%;">
+			<h1>SE</h1>
+		</div>
+		<div class="col" style=" margin-top: 5%;">
+			<h3>Usefull Links</h3>
+		</div>
+		<div class="col" style=" margin-top: 5%;">
+			<h3>Contact Us</h3>
+		</div>
+		<div class="col" style=" margin-top: 5%;">
+			<h3>Accreditations</h3>
+		</div>
+	</div>
+	<div class="row" style="width: 2000px; background-color: gray; text-align: center;">
+		<div class="col">
+			<h1></h1>
+		</div>
+		<div class="col">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+		         <li class="nav-item">
+		            <%= link_to "home", root_path, style:"margin-left: 5%;", class:"nav-link" %>
+		         </li>
+	             <li class="nav-item">
+	              <%= link_to "ABOUT", articles_about_path, style:"margin-left: 5%;", class:"nav-link" %>
+	            </li>
+	             <li class="nav-item">
+	              <%= link_to "SERVICES", articles_services_path, style:"margin-left: 5%;", class:"nav-link" %>
+	            </li>
+	             <li class="nav-item">
+	              <%= link_to "GALLERY", articles_gallery_path, style:"margin-left: 5%;", class:"nav-link" %>
+	            </li>
+	             <li class="nav-item">
+	              <%= link_to "FAQ", articles_faq_path, style:"margin-left: 5%;", class:"nav-link" %>
+	            </li>
+	             <li class="nav-item">
+	              <%= link_to "CONTACT", articles_contact_path, style:"margin-left: 5%;", class:"nav-link" %>
+	            </li>
+	         </ul>
+		</div>
+		<div class="col">
+			<p style="text-align: center;">
+				Islampur Das, District-bijnor, post- Bijnor, State- Utter Pradesh, 246701
+			</p>
+			<br>
+			<div class="row">
+				<div class="col-3">
+					contact No. :-
+				</div>
+				<div class="col" style="text-align: left;">
+					<%= phone_to 8077120655, class:"nav-link" %>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-3">
+					contact No. :-
+				</div>
+				<div class="col" style="text-align: left;">
+					<%= phone_to 9355389879, class:"nav-link" %>
+				</div>
+			</div>
+			
+		</div>
+		<div class="col">
+			<h4 style="color: lightcoral;">ISO 9001/2001</h4>
+		</div>
+	</div>
 
 </div>
