--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,10 +10,10 @@
 			India's Leading Sheet Metal Fabricator
 		</h2>
 		<p>
-			Fabricators India is one of the largest engineering and fabrication companies in India, delivering precision sheet metal fabrication and CNC machining services to large OEMs. Working from multiple manufacturing sites across India and operating in many industries including Railways, Defence, Switchgear, Kiosk & Vending, Automotive, Architectural and Food Processing, Fabricators India is well placed to meet any subcontract engineering and metalworking requirement.
+			SZAMAL ENTERPRISES is one of the largest engineering and fabrication companies in India, delivering precision sheet metal fabrication and CNC machining services to large OEMs. Working from multiple manufacturing sites across India and operating in many industries including Railways, Defence, Switchgear, Kiosk & Vending, Automotive, Architectural and Food Processing, SZAMAL ENTERPRISES is well placed to meet any subcontract engineering and metalworking requirement.
 		</p>
 		<p>
-			Whether your product requires CNC Laser Cutting, CNC Machining, Metal Forming, Welding, Powder coating, or Dedicated Stainless Steel Fabrication, Fabricators India has the engineering capacity to fulfil customer requirements with agility and speed. With extensive in-house capabilities and state-of-the-art technology, Fabricators India is truly is your one-stop metalworking partner.
+			Whether your product requires CNC Laser Cutting, CNC Machining, Metal Forming, Welding, Powder coating, or Dedicated Stainless Steel Fabrication, SZAMAL ENTERPRISES has the engineering capacity to fulfil customer requirements with agility and speed. With extensive in-house capabilities and state-of-the-art technology, SZAMAL ENTERPRISES is truly is your one-stop metalworking partner.
 		</p>
 	</div>
 	<div class="row" style="background-color: lightgray; width: 2000px;">
@@ -279,12 +279,12 @@
 				 LOOKING FOR A RELIABLE SUPPLIER?
 			</h2>
 			<p style="text-align: center; margin-left: 30%; margin-right: 30%;">
-				At Fabricators India, we aim to build long-term partnerships with our clients in order to ensure a world-class, integrated supply chain. We strive to consistently meet extremely high standards for quality, delivery, cost and customer satisfaction for our clients. 
+				At SZAMAL ENTERPRISES, we aim to build long-term partnerships with our clients in order to ensure a world-class, integrated supply chain. We strive to consistently meet extremely high standards for quality, delivery, cost and customer satisfaction for our clients. 
 			</p>
 			<h2 style="text-align: center;">
 			
 				<%= link_to "CONTACT US", articles_contact_path, class:"btn btn-primary" %>
-			</h1>
+			</h2>
 		</div>
 	</div>
 	<div class="row" style="width: 2000px; background-color: gray; text-align: center;">
@@ -354,5 +354,4 @@
 			<h4 style="color: lightcoral;">ISO 9001/2001</h4>
 		</div>
 	</div>
-
 </div>
