--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -40,10 +40,10 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-            <h3>call us- <%= phone_to 8077120655, class:"list-item" %></h3>
+            <h3>Call Us- <%= phone_to 8077120655, class:"list-item" %></h3>
         </div>
         <div class="col">
-          <h3>Email us- <%= mail_to "szamal@gmail.com", class:"list-item" %></h3>
+          <h3>Email At- <%= mail_to "szamal@gmail.com", class:"list-item" %></h3>
         </div>
     </div>
   </div>
