--- a/app/views/articles/about.html.erb
+++ b/app/views/articles/about.html.erb
@@ -1,12 +1,51 @@
 
-<div class="container text-center" style="margin-top: 10%;">
+<div class="container text-center" style="margin-top: -2%;">
 	<div class="row">
-		<div class="col-4">
-			photo
-		</div>
-		<div class="col-8">
-			Hi this is SZamal Enterprises
+		<div style="width: 2000px; height: 200px; text-align: center; background: lightgray; align: center;">
+			<h1>ABOUT US</h1>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-4" style="background-color: skyblue;">
+			<%= image_tag "https://onlineconvertfree.com/convert-format/jpg-to-html/" %>
+		</div>
+		<div class="col-8">
+		<h3 style="text-align: left;">INTRODUCTION</h3>
+		<p style="text-align: left;">
+			SZAMAL ENTERPRISES, an ISO 9001:2015 certified engineering firm, was established in 1979, to provide complete fabrication solutions to the sheet metal industry for India and Globally. SZAMAL ENTERPRISES is one of the largest suppliers of Aluminium & Stainless Steel Water Tanks and Enclosures for the Indian Railways. Our other accreditations include ISO 3834-2 and EN 15085 certifications.
+		</p>
+		</div>
+	</div>
+	<div class="row" style="margin-top: 5%;">
+		
+		<h3 style="text-align: left;">TEAM</h3>
+		<p style="text-align: left;">
+			We have a strong team of management graduates and engineering support to provide the requisite technical expertise in the field of Sheet Metal Fabrication and Mechanical Engineering, and Quality Control.
+		</p>
+		
+		<h3 style="text-align: left;">STATE-OF-THE-ART INFRASTRUCTURE</h3>
+		<p style="text-align: left;">
+			Spread over 2 units in Howrah, West Bengal in the eastern part of India, SZAMAL ENTERPRISES has all the CNC and NC machines for the precision needs and high productivity required.
+		</p>
+		<p style="text-align: left;">
+			We have Bystronic 6KW Fiber Laser Profile Cutting Machines, CNC Lathes, CNC Press Brakes, and TIG/MIG Welding in-house. We also have access to Surface Coating units and Painting facilities. We have access to Kolkata port which helps us ship products globally.
+		</p>
+		<h3 style="text-align: left;">VISION & MISSION</h3>
+		<p style="text-align: left;">
+			To continually engage in new product development to meet the engineering needs of Indian and International clients, and provide 100% customer satisfaction by:
+
+		    1. Maintaining rigorous and excellent quality control systems
+		    2. Maintaining ethical standards
+		    3. Continual improvement of in-house systems
+
+		</p>
+		<h3 style="text-align: left;">QUALITY POLICY</h3>
+		<p style="text-align: left;">
+			Our motto is to provide products which are strong, reliable and can endure the test of time. We are an ISO 9001:2015, ISO 3834-2 and EN15085 certified and strictly adhere to all processes and norms to ensure that the highest standards of quality control are maintained.
+		</p>
+
+	</div>
 </div>
+<br>
+<br>
 
