--- a/app/views/articles/contact.html.erb
+++ b/app/views/articles/contact.html.erb
@@ -1,1 +1,90 @@
-Contact
+<div class="container-fluid-center" style="margin-bottom: 5%;">
+	<div class="row">
+		<div style="width: 2000px; height: 200px; text-align: center; background: lightgray; align: center;">
+			<h3>
+				CONTACT US
+			</h3>
+		</div>
+	</div>
+	<div class="row" style="width: 2000px; justify-content: center; margin-top: 5%;">
+		<div class="col-4">
+			<h3 style="text-align: center;">
+				Get in Touch
+			</h3>
+			<div class="container-fluid-center" style="margin-top: 8%">
+				<div class="row">
+					<div class="col-6" style="text-align: center;">
+						adress
+					</div>
+					<div class="col-6">
+						<h4>
+							Visit Us
+						</h4>
+						<h6>
+							Office
+						</h6>
+						<p>
+							abc place india
+							xxxxxx
+						</p>
+						
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-6" style="text-align: center;">
+						Email
+					</div>
+					<div class="col-6">
+						<h5>
+							Email Address
+						</h5>
+						<p>
+							<%= mail_to "shahzamal2013@gmail.com", class:"nav-link" %>
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-6" style="text-align: center;">
+						Call
+					</div>
+					<div class="col-6">
+						<h5>
+							Call US
+						</h5>
+						<p>
+							<div class="row">
+								<div class="col-4">
+									International  
+								</div>
+								<div class="col-4">
+									<%= phone_to 1234567890, class:"nav-link" %>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-4">
+									Domestic  
+								</div>
+								<div class="col-4">
+									<%= phone_to 1234567890, class:"nav-link" %>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-4">
+									Office  
+								</div>
+								<div class="col-4">
+									<%= phone_to 1234567890, class:"nav-link" %>
+								</div>
+							</div>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-4" style="justify-content: center;">
+			<h3>
+				MESSAGE US
+			</h3>
+		</div>
+	</div>
+</div>
