--- a/app/views/articles/faq.html.erb
+++ b/app/views/articles/faq.html.erb
@@ -1,1 +1,50 @@
-FAQ
+<div class="container text-center" style="margin-top: -2%;">
+	<div class="row">
+		<div style="width: 2000px; height: 200px; text-align: center; background: lightgray; align: center;">
+			<h1>FREQUENTLY ASKED QUESTIONS</h1>
+		</div>
+	</div>
+	<div class="row" style="margin-top: 5%;">
+		
+		<h3 style="text-align: left;">
+			Why should I choose Fabricators India as a vendor of choice?
+		</h3>
+		<p style="text-align: left;">
+			We are one of India's leading sheet metal fabricator with a diverse experience spanning 5 decades and comprising latest in-house CNC machinery and Bystronic Lasers. We provide a plethora of services all under one roof, and we have access to shipping ports for overseas shipping.
+		</p>
+		<h3 style="text-align: left;">
+			How do I get a quotation for my requirements?
+		</h3>
+		<p style="text-align: left;">
+			All you need to do is email us at sales@fabricatorsindia.com or contact us using phone numbers on the Contact Us page on the website. We request you to kindly provide as many details as available with you such as - Material, Thickness, Quantity, CAD Drawings (or sketches, etc.to indicate the part sizes). We shall then get back to you with our estimate or queries and process your RFQ as soon as possible.
+		</p>
+		<h3 style="text-align: left;">
+			What are the best files to send to obtain a quotation?
+		</h3>
+		<p style="text-align: left;">
+			A 1:1 in drawing file in mm in formats such as .dwg, .dxf, and or .cdr are perfect and allow us to quote quicker as these files can be imported directly into our quoting software. However, we can also work with sketches, Pdf's, Jpegs provided they have relevant dimensions noted to enable us to draw the items on CAD softwares.
+		</p>
+		<h3 style="text-align: left;">
+			Can you give me a ball park price over the phone?
+		</h3>
+		<p style="text-align: left;">
+			Laser cutting, Bending and/or Fabrication costs are based on many factors and are not priced solely on material size or sq.ft. of cutting, etc. We prefer to receive all the information on email for us to work out a proper quotation.
+		</p>
+		<h3 style="text-align: left;">
+			How long will my order take to process?
+		</h3>
+		<p style="text-align: left;">
+			It depends on the quantum of work involved. We do offer same day delivery in case of extremely urgent and small quantities. However, in general, orders generally take 5-15 working days from date of payment to process.
+		</p>
+		<h3 style="text-align: left;">
+			What if I have an urgent order?
+		</h3>
+		<p style="text-align: left;">
+			We do offer a Fast Track Cutting and Bending service wherein we can offer delivery in 1-2 working days; However it depends on the urgency and is done in special cases only.
+		</p>
+	</div>
+</div>
+<br>
+<br>
+<br>
+
