--- a/app/views/articles/services.html.erb
+++ b/app/views/articles/services.html.erb
@@ -1,1 +1,563 @@
-services
+<div class="container text-center" style="margin-top: -2%;">
+	<div class="row">
+		<div style="width: 2000px; height: 200px; text-align: center; background: lightgray; align: center;">
+			<h1>OUR SERVICES</h1>
+			<p> We offer a vast gamut of services with extensive in-house technologies to meet the needs of Sheet Metal Fabrication for our clients.</p>
+		</div>
+	</div>
+	<div class="row nav">
+		<div class="col-lg-3 col-md-2 col-sm-12 tabs">
+			<a id="1" class="active" href="#">arc welding </a>
+		</div>
+		
+		<div class="col-lg-3 col-md-2 col-sm-12 tabs">
+			<a id="2" href="#">CNC Laser Cutting</a>
+		</div>
+		
+		
+		<div class="col-lg-3 col-md-2 col-sm-12 tabs">
+			<a id="3" href="#">Press Shop</a>
+		</div>
+		
+		
+		<div class="col-lg-3 col-md-2 col-sm-12 tabs">
+			<a id="4" href="#">CNC Machining </a>
+		</div>
+		
+		
+		<div class="col-lg-3 col-md-2 col-sm-12 tabs">
+			<a id="5" href="#">Assembly </a>
+		</div>
+		
+		
+		<div class="col-lg-3 col-md-2 col-sm-12 tabs">
+			<a id="6" href="#">Surface Treatment</a>
+		</div>
+		
+		<div class="col-lg-3 col-md-2 col-sm-12 tabs">
+			<a id="7" href="#">Sheet Metal Bending</a>
+		</div>
+		
+		
+		<div class="col-lg-3 col-md-2 col-sm-12 tabs">
+			<a id="8" href="#">Welding & Automation</a>
+		</div>
+	</div>
+</div>
+
+
+<!-- Accordions -->
+			<div class="tabContent" id="tabContent1">
+				<div class="panel-group" id="accordion">
+				    <div class="panel panel-default">
+				        <div class="panel-heading">
+							<h4 class="panel-title"></h4>
+					 
+						 	<table border="0" width="100%">
+								 <tr>
+									 <td border="0" height="30"></td>
+								 </tr>
+							</table>
+							<div class="row">
+								<div class="col-lg-5 col-md-2 col-sm-12">
+							 		<!-- <img class="img-responsive" src="service/cad_design/0.jpg" alt=""> -->
+								</div>
+								<div class="col-lg-7 col-md-2 col-sm-12">
+									<p>
+										Fabricators India has the people, quality, technology, and reputation in the market place to help you succeed.
+										Examples of high volume precision metalwork products that benefit from our design engineering process include tanks, electrical enclosures, brackets for earth moving equipments, kiosks and vending machines, point-of-sale units, processing and packaging systems, and HVAC equipment to name a few. Our team also specializes in drawing of Designer Panels used as Architectural Screens & Facades. 
+										In addition to our efficient design and prototype capabilities, Fabricators India can easily scale up from a prototype project to full production quickly and effortlessly.
+									</p>
+
+									<p>
+										Our Design Capabilities:
+										</br>
+										<ul class="ul_li">
+											<li>	1. Understand and ensure we can meet the customer's requirement and desired specification</li>
+											<li>	2. Carefully manage the initial design phase to ensure there are no delays</li>
+											<li>	3. Agree timescales to meet our customer's requirements</li>
+											<li>	4. Provide prototypes or 3D models allowing early customer collaboration</li>
+											<li>	5. Produce engineering drawings and bills of materials including supply chain</li>
+										</ul>
+									</p>
+								</div>
+							</div>	
+							<p>
+							 	<div class="testimonial-area section-padding">
+							 		<div class="capricorn-testimonial">
+							 			<div class="container">
+							 				
+
+							 				<div class="row">
+							 					<div class="col-lg-12">
+							 						<div class="team-carousel owl-carousel">
+													
+													
+							 							<div class="single-team-item">
+							 							
+							 							
+							 								<!-- <img src="service/cad_design/1.jpg" alt=""> -->
+							 								
+							 							</div>
+
+							 							<div class="single-team-item">
+							 							
+							 							
+							 								<!-- <img src="service/cad_design/2.jpg" alt=""> -->
+							 								
+							 							</div>
+
+							 							<div class="single-team-item">
+							 								
+							 							
+							 								<!-- <img src="service/cad_design/3.jpg" alt=""> -->
+							 								
+							 							</div>
+							 						</div>
+							 					</div>
+							 				</div>
+							 			</div>
+							 		</div>
+							 	</div>	  
+							</p>
+				        </div>
+				    </div>
+			    </div>
+			</div>
+			<div class="tabContent" id="tabContent2">
+			   <table border="0" width="100%">
+					<tr>
+				 		<td border="0" height="30"></td>
+				 	</tr>
+				</table>
+				<div class="row">
+					<div class="col-lg-5 col-md-2 col-sm-12">
+						<img class="img-responsive" src="service/laser_cutting/0.jpg" alt="">
+					</div>
+
+					<div class="col-lg-7 col-md-2 col-sm-12">
+						<p> 
+							  
+							 We at Fabricators India have 2 Fiber Laser machines that offer high versatility and run lights out, 24-hours-per-day, seven-days-a-week to deliver an array of sheet metal components and assemblies for various industries.
+						</p>
+							 
+						<p> 
+							Our Bystronic Fiber Laser machines cut materials with a repetitive accuracy of 0.03 mm, including Mild Steel, Stainless Steel, Aluminium Alloys, Galvanized Steel, Titanium, Brass and Copper in sheet sizes up to 2050 mm X 4100 mm.
+						</p>
+
+						<p> 
+							Laser Cutting operations on our 6000 Watt machine ensures highly accurate cut parts with no heat damage and cut quality so good that it can be used for cutting very intricate shapes, elaborate patterns and small holes. 
+						</p>
+
+
+					</div>
+				</div>
+
+				<p>
+					Our Machine Capacity is as follows: 
+					<ul class="ul_li">
+						<li>1.	Maximum Bed Size: 2050 mm X 4100 mm </li>
+						<li>2.	Stainless Steel Cutting upto 30 mm Thick </li>
+						<li>3.	Aluminium cutting upto 30 mm Thick </li>
+						<li>4.	Mild Steel cutting upto 25 mm Thick </li>
+						<li>5.	Brass cutting upto 15 mm Thick </li>
+						<li>6.	Copper, Galvanized Sheets and Titanium cutting upto 12 mm Thick </li>
+					</ul>
+				</p>
+			 	<div class="testimonial-area section-padding">
+			 		<div class="capricorn-testimonial">
+			 			<div class="container">
+			 				<div class="row">
+			 					<div class="col-lg-12">
+			 						<div class="team-carousel owl-carousel">
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/laser_cutting/1.jpg" alt=""> -->
+			 							</div>
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/laser_cutting/2.jpg" alt=""> -->
+			 							</div>
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/laser_cutting/3.jpg" alt=""> -->
+			 							</div>
+			 						</div>
+			 					</div>
+			 				</div>
+			 			</div>
+			 		</div>
+			 	</div>	
+
+				<table border="0" width="100%">
+					<tr>
+						<td border="0" height="30"></td>
+					</tr>
+				</table>
+			</div>  
+			<div class="tabContent" id="tabContent3">
+				<table border="0" width="100%">
+					<tr>
+				 		<td border="0" height="30"></td>
+				 	</tr>
+				</table>
+				<div class="row">
+					<div class="col-lg-5 col-md-2 col-sm-12">
+						<img class="img-responsive" src="service/press_shop/0.jpg" alt="">
+					</div>
+
+					<div class="col-lg-7 col-md-2 col-sm-12">
+						<div class="author-desc">
+							<h5 style="padding-left: 0;">Sheet Metal Bending</h5>
+						</div>
+
+						<p> 
+							We have Two CNC Press Brakes, we deliver products which are reliable, high on productivity and predictable lead times. 
+							Our Machine Capacity is as follows:
+
+							<ul class="ul_li">
+								<li>1.	Maximum bending length: 3000 mm </li>
+								<li>2.	Machine Tonnage: Upto 250 Tons </li>
+								<li>3.	Mild Steel bending upto 10 mm Thick </li>
+								<li>4.	Stainless Steel bending upto 5 mm Thick </li>
+							</ul>
+						 </p>
+
+						<div class="author-desc">
+							<h5 style="padding-left: 0;">Press Shop</h5>
+						</div>
+							<p> 
+								We at Fabricators India have a range of Presses from 50 ton to 1000 ton Deep Draw Presses. We can manufacture components as per drawings for small batches and high volume production, both. Our combination of presses and multiple bending machines ensure we can manufacture a variety of components to meet the needs of our clients. 
+							</p> 
+					</div>
+				</div>
+			    <div class="testimonial-area section-padding">
+			 		<div class="capricorn-testimonial">
+			 			<div class="container">
+			 				<div class="row">
+			 					<div class="col-lg-12">
+			 						<div class="team-carousel owl-carousel">
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/press_shop/1.jpg" alt=""> -->
+			 							</div>
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/press_shop/2.jpg" alt=""> -->
+			 							</div>
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/press_shop/3.jpg" alt=""> -->
+			 							</div>
+			 						</div>
+			 					</div>
+			 				</div>
+			 			</div>
+			 		</div>
+			 	</div>	
+
+				<table border="0" width="100%">
+					<tr>
+						<td border="0" height="30"></td>
+					</tr>
+				</table>
+			</div>  
+			<div class="tabContent" id="tabContent4">
+			  	<table border="0" width="100%">
+					<tr>
+						<td border="0" height="30"></td>
+					</tr>
+				</table>
+				<div class="row">
+					<div class="col-lg-5 col-md-2 col-sm-12">
+						<img class="img-responsive" src="service/cnc_machining/0.jpg" alt="">
+					</div>
+
+					<div class="col-lg-7 col-md-2 col-sm-12">
+
+						<div class="author-desc">
+							<h5 style="padding-left: 0;">CNC Turning</h5>
+						</div>
+						<p> 
+							High Speed CNC Lathes at Fabricators India are capable of manufacturing a wide range of products. We also have an extensive range of Manual Lathes to handle large as well as smaller components upto 200 mm Diameter. 
+						</p>
+
+
+
+						<p>&nbsp;</p>
+
+						<div class="author-desc">
+							<h5 style="padding-left: 0;">5 Axis Machining</h5>
+						</div>
+
+						<p> Computer controlled 5 Axis Machining Centres at our associates enable the precision engineering of highly complex metal parts, quickly, efficiently to exact dimensions. We can supply machined components in many materials including Carbon Steel, Stainless Steel, Brass, Aluminium and so on.  </p> 
+					</div>
+				</div>
+									
+				<p> 
+					We also have access to CNC Milling, Horizontal and Vertical Machining Centres to help our customers achieve a one-stop solution for machined parts. 
+				</p>
+
+				<p> 
+				&nbsp;
+				</p>
+				<div class="testimonial-area section-padding">
+			 		<div class="capricorn-testimonial">
+			 			<div class="container">
+			 				<div class="row">
+			 					<div class="col-lg-12">
+			 						<div class="team-carousel owl-carousel">
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/cnc_machining/1.jpg" alt=""> -->
+			 							</div>
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/cnc_machining/2.jpg" alt=""> -->
+			 							</div>
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/cnc_machining/3.jpg" alt=""> -->
+			 							</div>
+			 						</div>
+			 					</div>
+			 				</div>
+			 			</div>
+			 		</div>
+			 	</div>	
+
+				<table border="0" width="100%">
+					<tr>
+						<td border="0" height="30"></td>
+					</tr>
+				</table>
+			</div>  
+						
+						
+			<div class="tabContent" id="tabContent5">
+			    <table border="0" width="100%">
+				 	<tr>
+					 <td border="0" height="30"></td>
+				 	</tr>
+				</table>
+				<div class="row">
+					<div class="col-lg-5 col-md-2 col-sm-12">
+						<img class="img-responsive" src="service/assembly/0.jpg" alt="">
+					</div>
+
+					<div class="col-lg-7 col-md-2 col-sm-12">
+						<p> At Fabricators India, we offer fabrication and assembly services for sheet metal and machined components. With the use of TIG, MIG and Arc Welding by qualified welders, we commit to deliver bespoke finished products. We are ISO 3834-2 and EN 15085 certified with respect to welding and we strive to achieve zero-defect material. </p>
+
+						<p>We fabricate a range of products from Water Tanks, Inlays, Earthmoving Equipment parts and brackets, Conveyer Chain Assemblies and Components, Electrical Boxes and Panels, and so on. We have many years of experience in the supply of high-level component sub assemblies to multiple industries. </p>
+
+						<p>We are capable of manufacturing Vending Machines, HVAC units, Kiosks, etc. We have facilities to do Leak Testing, Radiography, Spectrometer and finishing operations like Packaging, Branding, Labelling and Delivery. </p>
+
+
+					</div>
+				</div>
+				<p>Our clients range from Railways, Defence, Earthmoving, Furniture, Kiosk Manufacturers and other OEMs.</p>
+				<p> 
+				&nbsp;
+				</p>
+				<div class="testimonial-area section-padding">
+			 		<div class="capricorn-testimonial">
+			 			<div class="container">
+			 				<div class="row">
+			 					<div class="col-lg-12">
+			 						<div class="team-carousel owl-carousel">
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/assembly/1.jpg" alt=""> -->
+			 							</div>
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/assembly/2.jpg" alt=""> -->
+			 							</div>
+			 							<div class="single-team-item">
+			 								<!-- <img src="service/assembly/3.jpg" alt=""> -->
+			 							</div>
+			 						</div>
+			 					</div>
+			 				</div>
+			 			</div>
+			 		</div>
+			 	</div>	
+
+				<table border="0" width="100%">
+					<tr>
+						<td border="0" height="30"></td>
+					</tr>
+				</table>
+			</div>  
+			<div class="tabContent" id="tabContent6">
+			  	<table border="0" width="100%">
+					<tr>
+					 	<td border="0" height="30"></td>
+					</tr>
+				</table>
+			<div class="row">
+				<div class="col-lg-5 col-md-2 col-sm-12">
+					<!-- <img class="img-responsive" src="service/surface_treatment/0.jpg" alt=""> -->
+				</div>
+
+				<div class="col-lg-7 col-md-2 col-sm-12">
+					 <p>
+					 	Surface treatment and metal finishing facilities enable us to offer direct shipping for our clients to their end-customers. We offer services such as Stainless Steel Polishing, In-house grinding, and painting.
+					 </p>
+					 
+					 
+					 <p>
+						We have a range of ISO certified suppliers who as associates offer services such as Powder Coating, Finish Painting, Zinc Plating, Hot Dip Galvanizing and so on. All our surface treatments are subject to rigorous checks and inspections prior to moving them for assembly or dispatch. 
+					 </p>
+				</div>
+			</div>
+			<div class="testimonial-area section-padding">
+				<div class="capricorn-testimonial">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-12">
+								<div class="team-carousel owl-carousel">
+									<div class="single-team-item">
+										<!-- <img src="service/surface_treatment/1.jpg" alt=""> -->
+									</div>
+									<div class="single-team-item">
+										<!-- <img src="service/surface_treatment/2.jpg" alt=""> -->
+									</div>
+									<div class="single-team-item">
+										<!-- <img src="service/surface_treatment/3.jpg" alt=""> -->
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>	
+			<div>
+				<table border="0" width="100%">
+					<tr>
+						<td border="0" height="30"></td>
+					</tr>
+				</table>
+			</div>  
+						
+						
+						
+						
+			<div class="tabContent" id="tabContent7">
+				<table border="0" width="100%">
+					<tr>
+						<td border="0" height="30"></td>
+					</tr>
+				</table>
+				<div class="row">
+					<div class="col-lg-5 col-md-2 col-sm-12">
+					<img class="img-responsive" src="service/sheet_metal_bending/0.jpg" alt="">
+				</div>
+
+				<div class="col-lg-7 col-md-2 col-sm-12">
+					<p>
+						We have Two CNC Press Brakes and specialize in Metal Folding and Fabrication services. We deliver products which are reliable, high on productivity and predictable lead times with the use of robust software on Delem Controllers. 
+					</p>
+					<p>				  
+						Our Machine Capacity is as follows:
+
+						<ul class="ul_li">
+							<li>1. Maximum bending length: 3000 mm  </li>
+							<li>2. Machine Tonnage: Upto 250 Tons</li>
+							<li>3. Mild Steel bending upto 10 mm Thick </li>
+							<li>4. Stainless Steel bending upto 5 mm Thick </li>
+						</ul>
+					</p>
+				</div>
+			</div>
+
+
+
+
+
+			<div class="testimonial-area section-padding">
+					<div class="capricorn-testimonial">
+						<div class="container">
+							<div class="row">
+								<div class="col-lg-12">
+									<div class="team-carousel owl-carousel">
+										<div class="single-team-item">
+											<!-- <img src="service/sheet_metal_bending/1.jpg" alt=""> -->
+										</div>
+										<div class="single-team-item">
+											<!-- <img src="service/sheet_metal_bending/2.jpg" alt=""> -->
+										</div>
+										<div class="single-team-item">
+											<!-- <img src="service/sheet_metal_bending/3.jpg" alt=""> -->
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>	
+			<div>
+				<table border="0" width="100%">
+					<tr>
+						<td border="0" height="30"></td>
+					</tr>
+				</table>
+			</div> 
+			<div class="tabContent" id="tabContent8">
+
+					<table border="0" width="100%">
+						<tr>
+							<td border="0" height="30"></td>
+						</tr>
+					</table>
+			<div class="row">
+				<div class="col-lg-5 col-md-2 col-sm-12">
+					<img class="img-responsive" src="service/welding/0.jpg" alt="">
+				</div>
+
+				<div class="col-lg-7 col-md-2 col-sm-12">
+					<p>
+					Our metal welding facilities include highly skilled MIG and TIG Welding for an extensive range of ferrous and non ferrous materials. Our highly experienced Welding team is EN 15085 and IS 3834-2 certified and specialize in welding of low to medium gauge thick material, and are trained to a very high standard. We manufacture multiple types of products with vast ranging complexities and sizes. Our products are suitable for applications where quality is of prime importance and tolerance control is critical. 
+					</p>
+					<p>&nbsp;</p>
+				</div>
+			</div>
+
+
+			<div class="testimonial-area section-padding">
+				<div class="capricorn-testimonial">
+					<div class="container">
+						
+
+						<div class="row">
+							<div class="col-lg-12">
+								<div class="team-carousel owl-carousel">
+							
+							
+									<div class="single-team-item">
+									
+									
+										<!-- <img src="service/welding/1.jpg" alt=""> -->
+										
+									</div>
+
+									<div class="single-team-item">
+									
+									
+										<!-- <img src="service/welding/2.jpg" alt=""> -->
+										
+									</div>
+
+									<div class="single-team-item">
+										
+									
+										<!-- <img src="service/welding/3.jpg" alt=""> -->
+										
+									</div>
+
+								
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>	
+			<table border="0" width="100%">
+				<tr>
+					<td border="0" height="30"></td>
+				</tr>
+			</table>
+		</div> 
+ 	</div>
+</div>
+	
+
