--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -31,6 +31,18 @@
              <li class="nav-item">
               <%= link_to "CONTACT", articles_contact_path, style:"margin-left: 5%;", class:"nav-link" %>
             </li>
+            <li class="nav-item">
+              <%#= link_to "CALL US-", style:"margin-left: 5%;", class:"nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= phone_to 1234567890, style:"margin-left: 5%;", class:"nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%#= link_to "EMAIL TO-", style:"margin-left: 5%;", class:"nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= mail_to "szamal@gmail.com", style:"margin-left: 5%;", class:"nav-link" %>
+            </li>
           </ul>
       </div>
     </div>
@@ -40,10 +52,10 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-            <h3>Call Us- <%= phone_to 8077120655, class:"list-item" %></h3>
+            
         </div>
         <div class="col">
-          <h3>Email At- <%= mail_to "szamal@gmail.com", class:"list-item" %></h3>
+          
         </div>
     </div>
   </div>
