--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,21 @@
     <%= yield %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
+  <%= render 'layouts/footer' %>
 
   <div style="width: 1988px; height: 100px; text-align: center; background: gray; align: center;">
-    
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+          <div style="color:white;text-align:center" class="col-lg-12 col-md-6 col-sm-12">
+            <p style="color:white;text-align:center" class="copyright-line">Copyright @ 2021 SZAMAL ENTERPRISES. All rights reserved.</p>
+          </div>
+          <div style="color:white;text-align:center" class="col-lg-12 col-md-6 col-sm-12">
+            <p  style="color:white;text-align:center" class="privacy">Privacy Policy | Terms &amp; Conditions</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   
   
@@ -35,7 +47,7 @@
     <%#= javascript_importmap_tags %>
   </head>
 <nav>
-    <i class="bi bi-house"><%= link_to "home", root_path %></i>
+    <i class="bi bi-house"><%#= link_to "home", root_path %></i>
       
 
       <%#= link_to "about", articles_about_path %>
