--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="row" style="width: 2000px; background-color: gray; text-align: center;">
+<div class="row" style="width: 2000px; background-color: gray; text-align: center; ">
 	<div class="col" style=" margin-top: 5%;">
 		<h1>SE</h1>
 	</div>
@@ -12,7 +12,7 @@
 		<h3>Accreditations</h3>
 	</div>
 </div>
-<div class="row" style="width: 2000px; background-color: gray; text-align: center;">
+<div class="row" style="width: 2000px; background-color: gray; text-align: center; justify-self: end;">
 	<div class="col">
 		<h1></h1>
 	</div>
@@ -34,7 +34,7 @@
               <%= link_to "FAQ", articles_faq_path, style:"margin-left: 5%;", class:"nav-link" %>
             </li>
              <li class="nav-item">
-              <%= link_to "CONTACT", articles_contact_path, style:"margin-left: 5%;", class:"nav-link" %>
+              <%= link_to "CONTACT", articles_new_path, style:"margin-left: 5%;", class:"nav-link" %>
             </li>
          </ul>
 	</div>
@@ -66,4 +66,18 @@
 		<h4 style="color: lightcoral;"> ISO 3834-2</h4>
 		<h4 style="color: lightcoral;">EN15085</h4>
 	</div>
+</div>
+<div style="width: 1988px; height: 100px; text-align: center; background: gray; align: center;">
+<div class="footer-bottom">
+  <div class="container">
+    <div class="row justify-content-center align-items-center">
+      <div style="color:white;text-align:center" class="col-lg-12 col-md-6 col-sm-12">
+        <p style="color:white;text-align:center" class="copyright-line">Copyright @ 2021 SZAMAL ENTERPRISES. All rights reserved.</p>
+      </div>
+      <div style="color:white;text-align:center" class="col-lg-12 col-md-6 col-sm-12">
+        <p  style="color:white;text-align:center" class="privacy">Privacy Policy | Terms &amp; Conditions</p>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
