--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,7 +29,7 @@
               <%= link_to "FAQ", articles_faq_path, style:"margin-left: 5%;", class:"nav-link" %>
             </li>
              <li class="nav-item">
-              <%= link_to "CONTACT", articles_contact_path, style:"margin-left: 5%;", class:"nav-link" %>
+              <%= link_to "CONTACT", articles_new_path, style:"margin-left: 5%;", class:"nav-link" %>
             </li>
             <li class="nav-item">
               <%#= link_to "CALL US-", style:"margin-left: 5%;", class:"nav-link" %>
