--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -284,7 +284,7 @@
 				</p>
 				<h2 style="text-align: center;">
 				
-					<%= link_to "CONTACT US", articles_contact_path, class:"btn btn-primary" %>
+					<%= link_to "CONTACT US", articles_new_path, class:"btn btn-primary" %>
 				</h2>
 			</div>
 		</div>
