--- a/app/views/articles/services.html.erb
+++ b/app/views/articles/services.html.erb
@@ -60,7 +60,7 @@
 							</table>
 							<div class="row">
 								<div class="col-lg-5 col-md-2 col-sm-12">
-							 		<!-- <img class="img-responsive" src="service/cad_design/0.jpg" alt=""> -->
+							 		<!-- <img --> class="img-responsive" src="service/cad_design/0.jpg" alt="">
 								</div>
 								<div class="col-lg-7 col-md-2 col-sm-12">
 									<p>
@@ -96,21 +96,21 @@
 							 							<div class="single-team-item">
 							 							
 							 							
-							 								<!-- <img src="service/cad_design/1.jpg" alt=""> -->
+							 								<!-- <img --> src="service/cad_design/1.jpg" alt="">
 							 								
 							 							</div>
 
 							 							<div class="single-team-item">
 							 							
 							 							
-							 								<!-- <img src="service/cad_design/2.jpg" alt=""> -->
+							 								<!-- <img --> src="service/cad_design/2.jpg" alt="">
 							 								
 							 							</div>
 
 							 							<div class="single-team-item">
 							 								
 							 							
-							 								<!-- <img src="service/cad_design/3.jpg" alt=""> -->
+							 								<!-- <img --> src="service/cad_design/3.jpg" alt="">
 							 								
 							 							</div>
 							 						</div>
@@ -132,7 +132,7 @@
 				</table>
 				<div class="row">
 					<div class="col-lg-5 col-md-2 col-sm-12">
-						<img class="img-responsive" src="service/laser_cutting/0.jpg" alt="">
+						<!-- <img --> class="img-responsive" src="service/laser_cutting/0.jpg" alt="">
 					</div>
 
 					<div class="col-lg-7 col-md-2 col-sm-12">
@@ -171,13 +171,13 @@
 			 					<div class="col-lg-12">
 			 						<div class="team-carousel owl-carousel">
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/laser_cutting/1.jpg" alt=""> -->
+			 								<!-- <img --> src="service/laser_cutting/1.jpg" alt="">
 			 							</div>
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/laser_cutting/2.jpg" alt=""> -->
+			 								<!-- <img --> src="service/laser_cutting/2.jpg" alt="">
 			 							</div>
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/laser_cutting/3.jpg" alt=""> -->
+			 								<!-- <img --> src="service/laser_cutting/3.jpg" alt="">
 			 							</div>
 			 						</div>
 			 					</div>
@@ -200,7 +200,7 @@
 				</table>
 				<div class="row">
 					<div class="col-lg-5 col-md-2 col-sm-12">
-						<img class="img-responsive" src="service/press_shop/0.jpg" alt="">
+						<!-- <img --> class="img-responsive" src="service/press_shop/0.jpg" alt="">
 					</div>
 
 					<div class="col-lg-7 col-md-2 col-sm-12">
@@ -235,13 +235,13 @@
 			 					<div class="col-lg-12">
 			 						<div class="team-carousel owl-carousel">
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/press_shop/1.jpg" alt=""> -->
+			 								<!-- <img --> src="service/press_shop/1.jpg" alt="">
 			 							</div>
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/press_shop/2.jpg" alt=""> -->
+			 								<!-- <img --> src="service/press_shop/2.jpg" alt="">
 			 							</div>
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/press_shop/3.jpg" alt=""> -->
+			 								<!-- <img --> src="service/press_shop/3.jpg" alt="">
 			 							</div>
 			 						</div>
 			 					</div>
@@ -264,7 +264,7 @@
 				</table>
 				<div class="row">
 					<div class="col-lg-5 col-md-2 col-sm-12">
-						<img class="img-responsive" src="service/cnc_machining/0.jpg" alt="">
+						<!-- <img --> class="img-responsive" src="service/cnc_machining/0.jpg" alt="">
 					</div>
 
 					<div class="col-lg-7 col-md-2 col-sm-12">
@@ -302,13 +302,13 @@
 			 					<div class="col-lg-12">
 			 						<div class="team-carousel owl-carousel">
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/cnc_machining/1.jpg" alt=""> -->
+			 								<!-- <img --> src="service/cnc_machining/1.jpg" alt="">
 			 							</div>
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/cnc_machining/2.jpg" alt=""> -->
+			 								<!-- <img --> src="service/cnc_machining/2.jpg" alt="">
 			 							</div>
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/cnc_machining/3.jpg" alt=""> -->
+			 								<!-- <img --> src="service/cnc_machining/3.jpg" alt="">
 			 							</div>
 			 						</div>
 			 					</div>
@@ -333,7 +333,7 @@
 				</table>
 				<div class="row">
 					<div class="col-lg-5 col-md-2 col-sm-12">
-						<img class="img-responsive" src="service/assembly/0.jpg" alt="">
+						<!-- <img --> class="img-responsive" src="service/assembly/0.jpg" alt="">
 					</div>
 
 					<div class="col-lg-7 col-md-2 col-sm-12">
@@ -357,13 +357,13 @@
 			 					<div class="col-lg-12">
 			 						<div class="team-carousel owl-carousel">
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/assembly/1.jpg" alt=""> -->
+			 								<!-- <img --> src="service/assembly/1.jpg" alt="">
 			 							</div>
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/assembly/2.jpg" alt=""> -->
+			 								<!-- <img --> src="service/assembly/2.jpg" alt="">
 			 							</div>
 			 							<div class="single-team-item">
-			 								<!-- <img src="service/assembly/3.jpg" alt=""> -->
+			 								<!-- <img --> src="service/assembly/3.jpg" alt="">
 			 							</div>
 			 						</div>
 			 					</div>
@@ -386,7 +386,7 @@
 				</table>
 			<div class="row">
 				<div class="col-lg-5 col-md-2 col-sm-12">
-					<!-- <img class="img-responsive" src="service/surface_treatment/0.jpg" alt=""> -->
+					<!-- <img --> class="img-responsive" src="service/surface_treatment/0.jpg" alt="">
 				</div>
 
 				<div class="col-lg-7 col-md-2 col-sm-12">
@@ -407,13 +407,13 @@
 							<div class="col-lg-12">
 								<div class="team-carousel owl-carousel">
 									<div class="single-team-item">
-										<!-- <img src="service/surface_treatment/1.jpg" alt=""> -->
+										<!-- <img --> src="service/surface_treatment/1.jpg" alt="">
 									</div>
 									<div class="single-team-item">
-										<!-- <img src="service/surface_treatment/2.jpg" alt=""> -->
+										<!-- <img --> src="service/surface_treatment/2.jpg" alt="">
 									</div>
 									<div class="single-team-item">
-										<!-- <img src="service/surface_treatment/3.jpg" alt=""> -->
+										<!-- <img --> src="service/surface_treatment/3.jpg" alt="">
 									</div>
 								</div>
 							</div>
@@ -440,7 +440,7 @@
 				</table>
 				<div class="row">
 					<div class="col-lg-5 col-md-2 col-sm-12">
-					<img class="img-responsive" src="service/sheet_metal_bending/0.jpg" alt="">
+					<!-- <img --> class="img-responsive" src="service/sheet_metal_bending/0.jpg" alt="">
 				</div>
 
 				<div class="col-lg-7 col-md-2 col-sm-12">
@@ -471,13 +471,13 @@
 								<div class="col-lg-12">
 									<div class="team-carousel owl-carousel">
 										<div class="single-team-item">
-											<!-- <img src="service/sheet_metal_bending/1.jpg" alt=""> -->
+											<!-- <img --> src="service/sheet_metal_bending/1.jpg" alt="">
 										</div>
 										<div class="single-team-item">
-											<!-- <img src="service/sheet_metal_bending/2.jpg" alt=""> -->
+											<!-- <img --> src="service/sheet_metal_bending/2.jpg" alt="">
 										</div>
 										<div class="single-team-item">
-											<!-- <img src="service/sheet_metal_bending/3.jpg" alt=""> -->
+											<!-- <img --> src="service/sheet_metal_bending/3.jpg" alt="">
 										</div>
 									</div>
 								</div>
@@ -501,7 +501,7 @@
 					</table>
 			<div class="row">
 				<div class="col-lg-5 col-md-2 col-sm-12">
-					<img class="img-responsive" src="service/welding/0.jpg" alt="">
+					<!-- <img --> class="img-responsive" src="service/welding/0.jpg" alt="">
 				</div>
 
 				<div class="col-lg-7 col-md-2 col-sm-12">
@@ -526,21 +526,21 @@
 									<div class="single-team-item">
 									
 									
-										<!-- <img src="service/welding/1.jpg" alt=""> -->
+										<!-- <img --> src="service/welding/1.jpg" alt="">
 										
 									</div>
 
 									<div class="single-team-item">
 									
 									
-										<!-- <img src="service/welding/2.jpg" alt=""> -->
+										<!-- <img --> src="service/welding/2.jpg" alt="">
 										
 									</div>
 
 									<div class="single-team-item">
 										
 									
-										<!-- <img src="service/welding/3.jpg" alt=""> -->
+										<!-- <img --> src="service/welding/3.jpg" alt="">
 										
 									</div>
 
